fixbuttoniPhoneRatioLegibility

--- a/style_moises.css
+++ b/style_moises.css
@@ -40,7 +40,6 @@ h1 {
   font-size: 36px;
   margin: auto;
   margin-top: 50px;
-  padding-right: 15px;
   text-align: center;
   color: wheat;
 }
@@ -56,21 +55,21 @@ h1 b {
   flex-grow: 4;
 }
 .header__logo {
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
 }
-.logo {
-}
+
 .header__nav {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
 }
 .header__link {
   text-decoration: none;
-  padding-right: 25px;
-  padding-bottom: 10px;
-  padding-left: 10px;
+  padding-right: 1px;
+  padding-bottom: 1px;
+  padding-left: 1px;
   color: white;
   font-size: 22px;
 }
@@ -105,9 +104,24 @@ h1 b {
 /*RESERVE*/
 .reserve_container {
   margin: 16px 6px 24px 6px;
+  flex-wrap: wrap;
   display: flex;
   justify-content: space-evenly;
 }
+
+#activities {
+justify-content: center; 
+}
+
+#activities > img {
+  width: 200px;
+}
+
+#activities > img:hover {
+  width: 350px;
+}
+
+
 
 #stays {
   display: flex;
@@ -124,7 +138,7 @@ h1 b {
 
 #houseSelection,
 #weekSelection {
-  font-size: large;
+  font-size: 14px;
   border-radius: 100%;
   text-align: center;
   border-style: groove;
@@ -133,8 +147,8 @@ h1 b {
 }
 
 #confirmButton {
-  padding: 16px;
-  font-size: 32px;
+  padding: 8px;
+  font-size: 28px;
   font-weight: 700;
   color: transparent;
   letter-spacing: 1px;
@@ -171,8 +185,10 @@ h1 b {
 #contact {
   margin: 40px 0 40px 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   gap: 20px;
+  align-items: center;
   line-height: 1.7;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
